--- a/MyDjango/templates/mainapp/index.html
+++ b/MyDjango/templates/mainapp/index.html
@@ -1,44 +1,55 @@
- {% load static %}
+{% load static %}
 <html>
-        <head>
-            <meta charset="UTF-8">
-            {%block title%}
-             {{ title }}
-             {% endblock %}
-{#            <title>Welcome my educational project</title>#}
-                <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-                <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-                <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<head>
+    <meta charset="UTF-8">
+    {% block title %}
+        {{ title }}
+    {% endblock %}
+    <link rel="stylesheet"
+          href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet"
+          href="{% static 'css/blog.css' %}">
+    <link rel="stylesheet"
+          href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
-            <div class="page-header">
-            <h1><a href="/">CAR DEALERSHIP</a></h1>
-            </div>
+    <div class="page-header">
+        <h1><a href="/">CAR DEALERSHIP</a></h1>
+    </div>
+</head>
+<body>
+{% block body %}
+    <span class="message">{{ message }}</span>{{ content }}
+    <div>
+        <a href="/manufacture"><span
+                style="color:violet">  Автомобили</span></a>
+    </div>
+    <div>
+        <a href="/cars"><span style="color:violet"> Акции  </span></a>
+    </div>
+    <div>
+        <a href="/salon"><span style="color:violet;"> Наши салоны </span></a>
+    </div>
+    <div>
+        <a href="/personal"><span style="color:violet;"> Персонал   </span></a>
+    </div>
+    <div>
+        <a href="/service"><span
+                style="color:violet;"> Сервисное обслуживание </span></a>
+    </div>
+    <div>
+        <a href="/about"><span
+                style="color:violet;"> Поступления на склад </span></a>
+    </div>
+    <div>
+        <a href="/contact"><span
+                style="color:violet;"> Презентационные ролики </span></a>
+    </div>
 
-        </head>
-        <body>
-            {% block body %}
-            <span class="message">{{message}}</span>{{ content }}
-              <div><a href="/manufacture"><span style="color:violet;front size="7"> Компании производители </span></a></div>
-              <div><a href="/cars"><span style="color:violet;">Автомобили </span></a></div>
-              <div><a href="/salon"><span style="color:violet;">Наши салоны </span></a></div>
-              <div><a href="/manager"><span style="color:violet;">Руководство компании </span></a></div>
-              <div><a href="/manshop"><span style="color:violet;">Менеджеры продаж </span></a></div>
-              <div><a href="/team"><span style="color:violet;">Отделы </span></a></div>
-              <div><a href="/about"><span style="color:violet;">О нас  </span></a></div>
-              <div><a href="/contact"><span style="color:violet;">Контакты</span></a></div>
 
-               <center>
-                   <img  src="static/img/qw.png" width="600" height="600">
-               </center>
+    <center>
+        <img src="static/img/qw.png" width="600" height="600">
+    </center>
 
-
-
-
-
-
-
-
-
-            {% endblock %}
-        </body>
-    </html>
+{% endblock %}
+</body>
+</html>
