--- a/MyDjango/templates/mainapp/man_list.html
+++ b/MyDjango/templates/mainapp/man_list.html
@@ -1,72 +1,106 @@
 {% load static %}
 
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="{% static 'css/bacfon.css' %}">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet"
+      href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
-{%block title%}
-    <h1 align="center">{{ title }}</h1>
+{% block title %}
+    <h1 align="center" style="color:yellowgreen "><strong> {{ title }}</strong></h1>
 {% endblock %}
 
 {% block content %}
+    <span class="message">{{ message }}</span>{{ content }}
+
+
     {% for el in man %}
-    <div class="alert alert -warning mt-2">
-        {% if el.manufacture_name == 'Bmw'  %}
-            <h2> {{el.manufacture_name}}</h2>
-            <h3>Страна производства:  {{el.country_of_manufacture}}</h3>
-            <img  src="/media/logo/bmw_logo.jpg" width="300" height="200" >
-            <h3 > История:  {{el.history}}</h3>
-        {%endif%}
+
+        {% if el.manufacture_name == 'Bmw' %}
+            <div><a href="/bmw" style="color:darkviolet">
+                <h1>{{ el.manufacture_name }}</h1></a></div>
+            <a href="/bmw"> <img src="{{ el.logo_manuf.url }}" width="1850"
+                                 height="700"></a>.
+            <h4 style="color:blanchedalmond"><strong>Страна
+                производства: {{ el.country_of_manufacture }}</strong></h4>
+            <h4 style="color:white"> История: {{ el.history }}</h4>
+        {% endif %}
         <br>
-        {% if el.manufacture_name == 'Opel'  %}
-            <h2> {{el.manufacture_name}}</h2>
-            <h3>Страна производства:  {{el.country_of_manufacture}}</h3>
-            <img  src="/media/logo/opel-logo.png" width="200" height="200" >
-            <h3>История:  {{el.history}}</h3>
-        {%endif%}
+        {% if el.manufacture_name == 'Opel' %}
+            <div><a href="/opel" style="color:darkviolet">
+                <h1>{{ el.manufacture_name }}</h1></a></div>
+            <center>
+            <a align="center" href="/opel"> <img src="{{ el.logo_manuf.url }}"
+                                                 width="1000" height="500"></a>
+            .
+            <center>
+            <h4 style="color:blanchedalmond"><strong>Страна
+                производства: {{ el.country_of_manufacture }}</strong></h4>
+            <h4 style="color:white"> История: {{ el.history }}</h4>
+        {% endif %}
         <br>
-        {% if el.manufacture_name == 'Renault'  %}
-            <h2> {{el.manufacture_name}}</h2>
-            <h3>Страна производства:  {{el.country_of_manufacture}}</h3>
-            <img  src="/media/logo/renault-logo.png" width="200" height="200" >
-            <h3>История:  {{el.history}}</h3>
-        {%endif%}
+        {% if el.manufacture_name == 'Mazda' %}
+            <div><a href="/mazda" style="color:darkviolet">
+                <h1>{{ el.manufacture_name }}</h1></a></div>
+            <a href="/mazda"> <img src="{{ el.logo_manuf.url }}" width="1850"
+                                   height="700"></a>.
+            <h4 style="color:blanchedalmond"><strong>Страна
+                производства: {{ el.country_of_manufacture }}</strong></h4>
+            <h4 style="color:white"> История: {{ el.history }}</h4>
+        {% endif %}
         <br>
-        {% if el.manufacture_name == 'Mazda'  %}
-            <h3> {{el.manufacture_name}}</h3>
-            <h3>Страна производства:  {{el.country_of_manufacture}}</h3>
-            <img  src="/media/logo/mazda__logo.jpg" width="200" height="200" >
-            <h3>История:  {{el.history}}</h3>
-        {%endif%}
+        {% if el.manufacture_name == 'Ford' %}
+            <div><a href="/ford" style="color:darkviolet">
+                <h1>{{ el.manufacture_name }}</h1></a></div>
+            <a href="/ford"> <img src="{{ el.logo_manuf.url }}" width="1850"
+                                  height="700"></a>.
+            <h4 style="color:blanchedalmond"><strong>Страна
+                производства: {{ el.country_of_manufacture }}</strong></h4>
+            <h4 style="color:white"> История: {{ el.history }}</h4>
+        {% endif %}
         <br>
-        {% if el.manufacture_name == 'Ford'  %}
-            <h2> {{el.manufacture_name}}</h2>
-            <h3>Страна производства:  {{el.country_of_manufacture}}</h3>
-            <img  src="/media/logo/ford-logo.png" width="350" height="200" >
-            <h3>История:  {{el.history}}</h3>
-        {%endif%}
+        {% if el.manufacture_name == 'Renault' %}
+            <div><a href="/renault" style="color:darkviolet">
+                <h1>{{ el.manufacture_name }}</h1></a></div>
+            <a href="/renault"> <img src="{{ el.logo_manuf.url }}" width="1850"
+                                     height="700"></a>.
+            <h4 style="color:blanchedalmond"><strong>Страна
+                производства: {{ el.country_of_manufacture }}</strong></h4>
+            <h4 style="color:white"> История: {{ el.history }}</h4>
+        {% endif %}
         <br>
-        {% if el.manufacture_name == 'Peugeot'  %}
-            <h2> {{el.manufacture_name}}</h2>
-            <h3>Страна производства:  {{el.country_of_manufacture}}</h3>
-            <img  src="/media/logo/peugeot_logo.jpeg" width="200" height="200" >
-            <h3>История:  {{el.history}}</h3>
-        {%endif%}
+        {% if el.manufacture_name == 'Peugeot' %}
+            <div><a href="/peugeot" style="color:darkviolet">
+                <h1>{{ el.manufacture_name }}</h1></a></div>
+            <a href="/peugeot"> <img src="{{ el.logo_manuf.url }}" width="1850"
+                                     height="700"></a>.
+            <h4 style="color:blanchedalmond"><strong>Страна
+                производства: {{ el.country_of_manufacture }}</strong></h4>
+            <h4 style="color:white"> История: {{ el.history }}</h4>
+        {% endif %}
         <br>
-        {% if el.manufacture_name == 'Honda'  %}
-            <h2> {{el.manufacture_name}}</h2>
-            <h3>Страна производства:  {{el.country_of_manufacture}}</h3>
-            <img  src="/media/logo/honda_logo.jpg" width="200" height="200" >
-            <h3>История:  {{el.history}}</h3>
-        {%endif%}
-         <br>
-        {% if el.manufacture_name == 'Lada'  %}
-            <h2> {{el.manufacture_name}}</h2>
-            <h3>Страна производства:  {{el.country_of_manufacture}}</h3>
-            <img  src="/media/logo/lada.webp" width="200" height="200" >
-            <h3>История:  {{el.history}}</h3>
-        {%endif%}
-    {%endfor%}
-    </div>
+        {% if el.manufacture_name == 'Honda' %}
+            <div><a href="/honda" style="color:darkviolet">
+                <h1>{{ el.manufacture_name }}</h1></a></div>
+            <a href="/honda"> <img src="{{ el.logo_manuf.url }}" width="1850"
+                                   height="700"></a>.
+            <h4 style="color:blanchedalmond"><strong>Страна
+                производства: {{ el.country_of_manufacture }}</strong></h4>
+            <h4 style="color:white"> История: {{ el.history }}</h4>
+        {% endif %}
+        <br>
+        {% if el.manufacture_name == 'Lada' %}
+            <div><a href="/lada" style="color:darkviolet">
+                <h1>{{ el.manufacture_name }}</h1></a></div>
+            <a href="/lada"> <img src="{{ el.logo_manuf.url }}" width="1850"
+                                  height="700"></a>.
+            <h4 style="color:blanchedalmond"><strong>Страна
+                производства: {{ el.country_of_manufacture }}</strong></h4>
+            <h4 style="color:white"> История: {{ el.history }}</h4>
+        {% endif %}
+        <br>
+    {% endfor %}
+
+
 
 {% endblock %}
